Bug 57166 - [GM45] Chrome experiment "Stars" crash: brw_fs_emit.cpp:708: brw_reg brw_reg_from_fs_reg(fs_reg*): Assertion „!"not reached"“ failed.
Summary: [GM45] Chrome experiment "Stars" crash: brw_fs_emit.cpp:708: brw_reg brw_reg_...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Eric Anholt
QA Contact:
URL: http://workshop.chromeexperiments.com...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-15 18:46 UTC by Pavel Ondračka
Modified: 2012-11-30 06:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel Ondračka 2012-11-15 18:46:28 UTC
Open this url in firefox: http://workshop.chromeexperiments.com/stars/

firefox: brw_fs_emit.cpp:708: brw_reg brw_reg_from_fs_reg(fs_reg*): Předpoklad „!"not reached"“ nesplněn.

Program received signal SIGABRT, Aborted.
0x0000003843035925 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
64	  return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig);
(gdb) bt
#0  0x0000003843035925 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#1  0x00000038430370d8 in __GI_abort () at abort.c:91
#2  0x000000384302e6a2 in __assert_fail_base (fmt=0x7ffff7eca6d4 "%s%s%s:%u: %s%sPředpoklad „%s“ nesplněn.\n%n", assertion=assertion@entry=
    0x7fffd42c199d "!\"not reached\"", file=file@entry=0x7fffd42c3912 "brw_fs_emit.cpp", line=line@entry=708, function=function@entry=
    0x7fffd42c4180 "brw_reg brw_reg_from_fs_reg(fs_reg*)") at assert.c:94
#3  0x000000384302e752 in __GI___assert_fail (assertion=0x7fffd42c199d "!\"not reached\"", file=0x7fffd42c3912 "brw_fs_emit.cpp", line=708, function=
    0x7fffd42c4180 "brw_reg brw_reg_from_fs_reg(fs_reg*)") at assert.c:103
#4  0x00007fffd425b86f in brw_reg_from_fs_reg (reg=reg@entry=0x7fffdfd6a8ec) at brw_fs_emit.cpp:708
#5  0x00007fffd425dade in fs_visitor::generate_code (this=0x7ffffffb67c0) at brw_fs_emit.cpp:803
#6  0x00007fffd4259016 in fs_visitor::run (this=this@entry=0x7ffffffb67c0) at brw_fs.cpp:1963
#7  0x00007fffd42591ff in brw_wm_fs_emit (brw=brw@entry=0x7fffdbda1030, c=c@entry=0x7fffd7602a10, prog=prog@entry=0x7fffd6f547b0) at brw_fs.cpp:2014
#8  0x00007fffd42a18ed in do_wm_prog (brw=0x7fffdbda1030, prog=0x7fffd6f547b0, fp=0x7fffdfd42000, key=<optimized out>) at brw_wm.c:251
#9  0x00007fffd425960c in brw_fs_precompile (ctx=0x7fffdbda1030, prog=0x68a) at brw_fs.cpp:2128
#10 0x00007fffd427eb05 in brw_shader_precompile (prog=0x7fffd6f547b0, ctx=0x7fffdbda1030) at brw_shader.cpp:70
#11 brw_link_shader (ctx=0x7fffdbda1030, shProg=0x7fffd6f547b0) at brw_shader.cpp:230
#12 0x00007fffd3e8f842 in _mesa_glsl_link_shader (ctx=ctx@entry=0x7fffdbda1030, prog=prog@entry=0x7fffd6f547b0)
    at ../../../src/mesa/program/ir_to_mesa.cpp:3159
#13 0x00007fffd3d4e89a in link_program (ctx=0x7fffdbda1030, program=<optimized out>) at ../../../src/mesa/main/shaderapi.c:758
#14 0x0000003e4279e9ed in ?? () from /usr/lib64/xulrunner/libxul.so
#15 0x0000003e4279ebda in ?? () from /usr/lib64/xulrunner/libxul.so
#16 0x0000003e42e3e3ec in ?? () from /usr/lib64/xulrunner/libxul.so
#17 0x0000003e3fac580c in ?? () from /usr/lib64/xulrunner/libmozjs.so
#18 0x0000003e3fab6e6d in ?? () from /usr/lib64/xulrunner/libmozjs.so
#19 0x0000003e3fca8f4c in ?? () from /usr/lib64/xulrunner/libmozjs.so
#20 0x0000003e3fcab5c4 in ?? () from /usr/lib64/xulrunner/libmozjs.so
#21 0x0000003e3fc9799a in ?? () from /usr/lib64/xulrunner/libmozjs.so
#22 0x0000003e3fc97b83 in ?? () from /usr/lib64/xulrunner/libmozjs.so
#23 0x00007fffc0ef55b2 in ?? ()
#24 0x00007fffc0ef57be in ?? ()
#25 0x0000000000000112 in ?? ()
#26 0x0000000000000000 in ?? ()

GPU: GM45
Mesa: 35e28b4583fdb206dc6b2dd49412362dc6a51953
Kernel: 3.6.6-1.fc17.x86_64
Libdrm: 7d42b49c0cf19dbb4531cd84efae51f95db2eea1
xf86-video-intel: f4c32af48b0c92a48131090886a6a6b6c45dbe34 (sna)
Firefox: 16.0.2
Comment 1 Eric Anholt 2012-11-20 06:56:41 UTC
Reproduced on my GM45.
Comment 2 Eric Anholt 2012-11-30 06:48:17 UTC
commit b9b033d8e456228fb05c5e28f85323de40f3292f
Author: Eric Anholt <eric@anholt.net>
Date:   Mon Nov 26 14:22:12 2012 -0800

    i965/fs: Don't generate saturates over existing variable values.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.